Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObjText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(Text var)
        if var:GetValue() = "text"
            output "passed"
        end
    end
end
