Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
